--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion">
-  <p><abbr title="kENYA WILDLIFE SERVICES">KWS</abbr> has one of the most rares species of lions.</p>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion" title="Visit the park." >
+  
   <!-- Your code here -->
 </body>
 
